<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="166dp"
    android:padding="16dp">

    <TextView
        android:id="@+id/deleteDialog_text"
        style="@style/TextHeading"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Just a minute!"
        />
    <TextView
        style="@style/TextSubHeading"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:justificationMode="inter_word"
        android:text="@string/Account_Delete_Account_Message" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/EditTextDeleteEmail"
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12sp"
            android:autofillHints="emailAddress"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/EditTextDeletePassword"
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/Password"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/account_Delete_Confirm_Button"
                style="@style/Button.Primary"
                android:layout_width="122dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/confirm" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="12dp">

        <Button
            android:id="@+id/account_delete_Cancel_Button"
            style="@style/Button.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>
</LinearLayout>
