<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="335dp"
        android:layout_height="589dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="120dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/addReviewTitle"
            style="@style/TextHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_review" />

        <TextView
            style="@style/TextSubHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:justificationMode="inter_word"
            android:padding="12dp"
            android:text="@string/how_was_your_experience" />


        <RatingBar
            android:id="@+id/review_ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:isIndicator="false"
            android:max="5"
            android:progressTint="@color/yellow"
            android:rating="0"
            android:stepSize="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="64dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/EditReview"
                style="@style/TextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="144dp"
                android:autofillHints="password"
                android:gravity="top"
                android:hint="@string/write_your_review_here"
                android:inputType="text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:gravity="center">

                <Button
                    android:id="@+id/add_review_cancel_Button"
                    style="@style/Button.Outlined"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:layout_marginRight="36dp"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/add_review_submit_Button"
                    style="@style/Button.Primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:text="@string/submit" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>