<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_gradient"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/focus_app_logo"
                        android:layout_width="47dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:contentDescription="@string/UniNook"
                        app:srcCompat="@drawable/logo_uninook" />

                    <TextView
                        android:id="@+id/focus_app_name"
                        style="@style/FocusMainTextAppName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="22dp"
                        android:text="@string/app_name" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/focus_main_logo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/focus_mode"
                        app:srcCompat="@drawable/focus" />
                </LinearLayout>

                <TextView
                    android:id="@+id/focus_title"
                    style="@style/FocusWhiteTextHeadingBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/focus_mode" />

                <TextView
                    android:id="@+id/textView6"
                    style="@style/FocusWhiteTextParagraphRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/focus_heading" />

                <TextView
                    android:id="@+id/focus_show_more"
                    style="@style/FocusWhiteTextParagraphRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="25dp"
                    android:text="Show More" />

                <Button
                    android:id="@+id/btn_click_below"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="180dp"
                    android:layout_marginEnd="162dp"
                    android:layout_marginBottom="10dp"
                    app:backgroundTint="@color/white"
                    android:background="@drawable/chevron_down_solid" />
            </LinearLayout>

<!--            <ImageView-->
<!--                android:id="@+id/focus_border"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="200dp"-->
<!--                android:contentDescription="@string/focus_mode"-->
<!--                app:srcCompat="@drawable/girl" />-->

            <TextView
                android:id="@+id/focus_subheading1"
                style="@style/FocusSubText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="12dp"
                android:text="@string/focus_subheading1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/focus_paragraph1"
                    style="@style/FocusTextRegular"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/focus_paragraph1" />

                <ImageView
                    android:id="@+id/focus_studygif"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/focus_mode"
                    app:srcCompat="@drawable/study" />
            </LinearLayout>

            <TextView
                android:id="@+id/focus_subheading2"
                style="@style/FocusSubText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="12dp"
                android:text="@string/focus_subheading2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/focus_paragraph2"
                    style="@style/FocusTextRegular"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:text="@string/focus_paragraph2" />

                <ImageView
                    android:id="@+id/focus_toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/focus_mode"
                    app:srcCompat="@drawable/toggle" />
            </LinearLayout>


            <TextView
                android:id="@+id/focus_last"
                style="@style/FocusTextHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginBottom="12dp"
                android:text="@string/focus_last" />

            <ImageView
                android:id="@+id/focus_goodluck"
                android:layout_width="300dp"
                android:layout_height="180dp"
                android:layout_marginStart="60dp"
                android:layout_marginBottom="70dp"
                android:contentDescription="@string/focus_mode"
                app:srcCompat="@drawable/good_luck" />

            <Button
                android:id="@+id/btn_focus_mode"
                style="@style/FocusWhiteTextRegular"
                android:layout_width="194dp"
                android:layout_height="59dp"
                android:layout_marginStart="110dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="162dp"
                android:layout_marginBottom="70dp"
                android:text="@string/focus_start" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginTop="424dp"
        android:background="@color/white"
        app:itemBackground="@color/white"
        app:itemIconSize="32dp"
        app:itemIconTint="@color/deepBlue"
        app:itemTextColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/bottom_menu"
        tools:layout_editor_absoluteX="0dp" />

</RelativeLayout>

