<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ImageViewSignUpLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:contentDescription="@string/UniNook"
            app:srcCompat="@drawable/logo_uninook" />


        <TextView
            android:id="@+id/TextViewSingUpUniNook"
            style="@style/TextHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/UniNook"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/TextViewSingUpPageTitle"
            style="@style/TextSubHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Sign_Up"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:orientation="vertical">

<!--        <EditText-->
<!--            android:id="@+id/EdiTextSignUpName"-->
<!--            style="@style/TextInputStyle"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginBottom="8sp"-->
<!--            android:hint="@string/Name"-->
<!--            android:inputType="text" />-->

        <EditText
            android:id="@+id/EditTextSignUpEmail"
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8sp"
            android:hint="@string/Email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/EditTextSignUpUserName"
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8sp"
            android:hint="@string/Username"
            android:inputType="text" />

        <EditText
            android:id="@+id/EditTextSignUpPassword"
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8sp"
            android:hint="@string/Password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/EditTextSignUpConfirmPassword"
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Confirm_Password"
            android:inputType="textPassword" />

    </LinearLayout>

    <Spinner
        android:id="@+id/SpinnerSignUpFacultyList"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextSignUpConfirmPassword" />

    <Spinner
        android:id="@+id/SpinnerSignUpDegreeList"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SpinnerSignUpFacultyList" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/EditTextSingUpOTP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="OTP"
            android:inputType="number"
            android:maxLength="6" />

        <Button
            android:id="@+id/ButtonSignUpGetOTP"
            style="@style/Button.Primary.Small"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Get OTP" />
    </LinearLayout>

    <Button
        android:id="@+id/ButtonSignUpJoinNow"
        style="@style/Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Join Now" />

    <TextView
        android:id="@+id/ButtonSignUpReportIssue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:text="Report issues"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ButtonSignUpJoinNow" />

</LinearLayout>
