<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp"
    android:background="@color/white"
    app:layout_constraintWidth="320dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="32dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ImageViewSignUpLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/UniNook"
            app:srcCompat="@drawable/logo_uninook" />

        <TextView
            android:id="@+id/TextViewSingUpUniNook"
            style="@style/TextHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/UniNook"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/TextViewSingUpPageTitle"
            style="@style/TextSubHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAlignment="center"
            android:orientation="vertical"
            android:visibility="invisible"
            android:focusable="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:orientation="vertical"
        android:focusable="false">

        <EditText
            android:id="@+id/EditTextLoginEmail"
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12sp"
            android:autofillHints="emailAddress"
            android:hint="@string/login_email_or_username"
            android:visibility="invisible"
            android:inputType="textEmailAddress" />

        <ProgressBar
            android:id="@+id/loadingGIF"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.502" />

        <TextView
            android:id="@+id/ButtonLogInForgetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:visibility="invisible"
            android:text="@string/forget_password" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:gravity="center">

            <Button
                android:id="@+id/ButtonLoginLogIn"
                style="@style/Button.Primary"
                android:layout_width="122dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:layout_marginTop="16dp"
                android:visibility="invisible"
                android:text="@string/login" />
        </LinearLayout>

        <TextView
            android:id="@+id/ButtonLogInGoToSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:visibility="invisible"
            android:text="First time here? Join us" />
    </LinearLayout>

</LinearLayout>
